redesign of mtp fit workflow and corresponding refactorings / cleanup